--- a/package.json
+++ b/package.json
@@ -7,11 +7,18 @@
     "start": "live-server --entry-file=index.html",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  
-  "keywords": ["portfolio", "proyecto", "servicios", "desarrollo web"],
+  "keywords": [
+    "portfolio",
+    "proyecto",
+    "servicios",
+    "desarrollo web"
+  ],
   "author": "Edily Mora",
   "license": "ISC",
   "devDependencies": {
-    "live-server": "^1.2.2"
+    "autoprefixer": "^10.4.20",
+    "live-server": "^1.2.2",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.12"
   }
 }
